--- a/css/style.css
+++ b/css/style.css
@@ -11,40 +11,45 @@ html, body {
 
 .container {
     display: flex;
+   justify-content: space-evenly;
     
+}
+.inner-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .flex-container-1 {
     background-color: pink;
-    display: flex;
-    /* justify-content: right;
-    align-items: end; */
-    max-width: 50em;
+    max-width: 30em;
     height: 10em;
 }
+
 .flex-container-2 {
     background-color: purple;
-    display: flex;
+    /* display: flex; */
     /* justify-content: left;
     align-items: end; */
-    max-width: 50em;
+    max-width: 30em;
     height: 10em;
 }
 .flex-container-3 {
     background-color: green;
-    display: flex;
+    /* display: flex; */
     /* justify-content: right;
     align-items: center; */
-    max-width: 50em;
+    max-width: 30em;
     height: 10em;
 }
 
 aside {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     flex-direction: column;
-    /* align-items: center; */
-    float:right;
-    max-width: 50em;
-    height: 10em;
+    /* align-items: center;
+    float:right; */
+    max-width: 10em;
+    height: 30em;
+    background-color: blue;
 }
