--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,27 @@ html, body {
     height: 100%;
 }
 
+header {
+    background-color: yellow;
+    display: flex;
+    height: 5rem;
+    justify-content: end;
+    margin-bottom: 5rem;
+    align-items: center;
+}
+
+.nav {
+    /* display: flex;
+    justify-content: space-between; */
+}
+
+a:link {
+    background-color: #ff33cc;
+    border-radius: 10px;
+    outline:#000000;
+    padding: 1rem;
+    color: #ffffff;
+}
 
 .hero {
     display: flex;
@@ -44,6 +65,8 @@ aside {
     box-shadow: 20px 20px #000000;
 }
 
-.contact-info {
+footer {
     max-width: 10rem;
+    max-height: 10rem;
+    background-color: orange;
 }
