--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ footer {
         border-radius: 10px;
         max-width: 40rem;
         box-shadow: 20px 20px #000000;
+        background-color: pink;
     }
  }
 
@@ -140,5 +141,6 @@ footer {
         box-shadow: none;
         margin-bottom: 0;
         border-radius: 0;
+        background-color: pink;
     }
  }
