--- a/css/style.css
+++ b/css/style.css
@@ -48,13 +48,16 @@ a:hover {
 .card {
     background-color: pink;
     /* max-width: 30em; */
-    height: 10rem;
+    height: 20rem;
     margin-bottom: 2rem;
     border-radius: 10px;
     max-width: 40rem;
     box-shadow: 20px 20px #000000;
 }
 
+.biography {
+    height: 20rem;
+}
 
 aside {
     display: flex;
