--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,20 @@
+:root {
+    --black: #000000;
+    --purple: #660066; 
+    --pink:     #ff00fe;
+    --white: #ffffff;
+}
+
+
 html, body {
     margin: 0;
     height: 100%;
     max-width: 100rem;
-    /* background-color: #000000; */
+    background-color: var(--purple);
 }
 
 header {
-    background-color: yellow;
+    background-color: var(--black);
     display: flex;
     height: 5rem;
     justify-content: end;
@@ -19,20 +27,20 @@ header {
 }
 
 .nav-link:link {
-    background-color: #ff33cc;
+    background-color: var(--pink);
     border-radius: 10px;
-    outline:#000000;
+    outline: var(--black);
     padding: 1rem;
     color: #ffffff;
     text-decoration: none;
 }
 
 .nav-link:hover {
-    background-color: #660066;
+    background-color: var(--purple);
 }
 
 .nav-link:visited {
-    color:#ffffff;
+    color: var(--white);
 }
 
 
@@ -68,13 +76,12 @@ img:hover {
 }
 
 .card {
-    background-color: pink;
-    /* max-width: 30em; */
+    background-color: var(--pink);
     height: 20rem;
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
     border-radius: 10px;
     max-width: 40rem;
-    box-shadow: 20px 20px #000000;
+    box-shadow: 20px 20px var(--black);
 }
 
 .biography {
@@ -87,15 +94,12 @@ ul {
 
 aside {
     display: flex;
-    /* justify-content: center; */
     flex-direction: column;
-    /* align-items: center;
-    float:right; */
     max-width: 10rem;
     height: 34rem;
-    background-color: blue;
+    background-color: var(--pink);
     border-radius: 10px;
-    box-shadow: 20px 20px #000000;
+    box-shadow: 20px 20px var(--black);
 }
 
 footer {
@@ -140,11 +144,11 @@ footer {
         border-radius: 10px;
         max-width: 40rem;
         box-shadow: 20px 20px #000000;
-        background-color: pink;
+        background-color: var(--pink);
     }
  }
 
- @media screen and (max-width: 414px) {
+ @media screen and (max-width: 535px) {
 
     .hero {
         display: flex;
@@ -159,6 +163,7 @@ footer {
     .inner-container {
         display:flex;
         justify-content: end;
+        align-items: center;
         flex-direction: column;
     }
 
@@ -166,6 +171,7 @@ footer {
         box-shadow: none;
         margin-bottom: 0;
         border-radius: 0;
+        height: 10rem;
     }
 
     aside {
@@ -173,6 +179,6 @@ footer {
         box-shadow: none;
         margin-bottom: 0;
         border-radius: 0;
-        background-color: pink;
+        background-color: var(--pink);
     }
  }
