--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ header {
 p {
     line-height: 1.5;
     line-height: 1.5rem;
+    color: var(--white)
 }
 
 img {
@@ -90,6 +91,7 @@ img:hover {
 
 ul {
     list-style: none;
+    color: var(--white);
 }
 
 aside {
@@ -133,11 +135,6 @@ footer {
         flex-direction: column;
     }
 
-    /* .card {
-   
-
-    } */
-
     aside {
         height: 10rem;
         margin-bottom: 2rem;
@@ -148,7 +145,7 @@ footer {
     }
  }
 
- @media screen and (max-width: 535px) {
+ @media screen and (max-width: 733px) {
 
     .hero {
         display: flex;
@@ -171,7 +168,12 @@ footer {
         box-shadow: none;
         margin-bottom: 0;
         border-radius: 0;
-        height: 10rem;
+        height: 30rem;
+        width: 30rem;
+    }
+
+    img:hover {
+        transform: scale(1);
     }
 
     aside {
@@ -179,6 +181,50 @@ footer {
         box-shadow: none;
         margin-bottom: 0;
         border-radius: 0;
+        height: 20rem;
+        width: 30rem;
+        background-color: var(--pink);
+    }
+ }
+
+ @media screen and (max-width: 503px) {
+
+    .hero {
+        display: flex;
+        align-items: center;
+    } 
+
+    header {
+        display: flex;
+        justify-content: center;
+        max-width: 940px;
+    }
+    .inner-container {
+        display:flex;
+        justify-content: end;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .card {
+        box-shadow: none;
+        margin-bottom: 0;
+        border-radius: 0;
+        height: 20rem;
+        width: 20rem;
+    }
+
+    img:hover {
+        transform: scale(1);
+    }
+
+    aside {
+        display: flex;
+        box-shadow: none;
+        margin-bottom: 0;
+        border-radius: 0;
+        height: 20rem;
+        width: 20rem;
         background-color: var(--pink);
     }
  }
