--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,21 @@ img {
     height: 10rem;
     width: 10rem;
 }
+.scale {
+    height: 10rem;
+    width: 10rem;
+}
 
-img:hover {
+.scale:hover {
+    transform: scale(3) translate(50px, 10px);
+}
+
+.bio-pic {
+    height: 10rem;
+    width: 10rem;
+}
+
+.bio-pic:hover {
     transform: scale(3);
 }
 
@@ -127,6 +140,10 @@ footer {
         border-radius: 10px;
         box-shadow: 20px 20px var(--black);
     }
+
+    .bio-pic {
+        border-radius: 10px;
+    }
 }
 
 
@@ -156,6 +173,8 @@ footer {
     }
 
     aside {
+        display: flex;
+        flex-direction: row;
         height: 10rem;
         margin-bottom: 2rem;
         border-radius: 10px;
