--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Root with variable names */
 :root {
     --black: #000000;
     --purple: #660066; 
@@ -5,7 +6,7 @@
     --white: #ffffff;
 }
 
-
+/* Basic styling for the whole page */
 html, body {
     margin: 0;
     height: 100%;
@@ -14,7 +15,7 @@ html, body {
     font-family: Arial, Helvetica, sans-serif;
 
 }
-
+/* Styling for the header.  Also contains nav linls */
 header {
     background-color: var(--black);
     display: flex;
@@ -45,16 +46,18 @@ header {
     color: var(--white);
 }
 
+/* Styling for headers */
 h1 {
     font-size: 1.7rem;
 }
 
-
+/* Hero styling.  Flex display settings */
 .hero {
     display: flex;
     flex-direction: column;
 }
 
+/* Paragraph styling */
 p {
     line-height: 1.5;
     line-height: 1.5rem;
@@ -62,6 +65,7 @@ p {
     font-size: 1.2rem;
 }
 
+/* Styling for the images */
 img {
     height: 10rem;
     width: 10rem;
@@ -84,6 +88,7 @@ img {
     transform: scale(3);
 }
 
+/* Container and card styling. */
 .container {
     display: flex;
     justify-content: space-evenly;
@@ -108,12 +113,14 @@ img {
     height: 20rem;
 }
 
+/* List styling */
 ul {
     list-style: none;
     color: var(--black);
     font-size: 1.2rem;
 }
 
+/* Styling for the aside element */
 aside {
     display: flex;
     flex-direction: column;
@@ -124,6 +131,7 @@ aside {
     box-shadow: 20px 20px var(--black);
 }
 
+/* Footer styling */
 footer {
     max-height: 10rem;
     background-color: var(--pink);
@@ -145,8 +153,6 @@ footer {
         border-radius: 10px;
     }
 }
-
-
 
  @media screen and (max-width:940px ) {
 
