--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html, body {
     max-width: 100rem;
     background-color: var(--purple);
     font-family: Arial, Helvetica, sans-serif;
-
+    font-weight: bold;
 }
 /* Styling for the header.  Also contains nav linls */
 header {
@@ -255,8 +255,12 @@ footer {
         box-shadow: none;
         margin-bottom: 0;
         border-radius: 0;
-        height: 20rem;
+        height: 45rem;
         width: 20rem;
+    }
+
+    .card .biography {
+        height: 100rem;
     }
 
     img:hover {
@@ -268,7 +272,7 @@ footer {
         box-shadow: none;
         margin-bottom: 0;
         border-radius: 0;
-        height: 20rem;
+        height: 25rem;
         width: 20rem;
         background-color: var(--pink);
     }
